added dummy premium logic for now